// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Render default title - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Render properties.bordered: true - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-bordered"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.colon: false - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.column: 2 - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.itemOptions.span - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.itemOptions.style - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},{\\"textAlign\\":\\"right\\"},null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={3}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items html values - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={3}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-list - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-list with new lines - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-object - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-object with new lines - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-object-object - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    <span
      className="{}"
    />
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.layout: vertical - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
          </th>
          <th
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
          </th>
          <th
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
          </th>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: default - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-small"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
          <td
            className="ant-descriptions-item {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              <span
                className="{}"
              />
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              <span
                className="{}"
              />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: small, properties.bordered: true - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
>
  <div
    className="ant-descriptions-title"
  >
    
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
          <th
            className="ant-descriptions-item-label {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </th>
          <td
            className="ant-descriptions-item-content {\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null,null]}"
            colSpan={1}
          >
            <span
              className="{}"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema default title 1`] = `true`;

exports[`Test Schema default title 2`] = `null`;

exports[`Test Schema properties.bordered: true 1`] = `true`;

exports[`Test Schema properties.bordered: true 2`] = `null`;

exports[`Test Schema properties.colon: false 1`] = `true`;

exports[`Test Schema properties.colon: false 2`] = `null`;

exports[`Test Schema properties.column: 2 1`] = `true`;

exports[`Test Schema properties.column: 2 2`] = `null`;

exports[`Test Schema properties.itemOptions.span 1`] = `true`;

exports[`Test Schema properties.itemOptions.span 2`] = `null`;

exports[`Test Schema properties.itemOptions.style 1`] = `true`;

exports[`Test Schema properties.itemOptions.style 2`] = `null`;

exports[`Test Schema properties.items html values 1`] = `false`;

exports[`Test Schema properties.items html values 2`] = `
Array [
  Object {
    "dataPath": "/properties/items/2/label",
    "keyword": "type",
    "message": "should be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/0/items/properties/label/type",
  },
  Object {
    "dataPath": "/properties/items",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/1/type",
  },
  Object {
    "dataPath": "/properties/items",
    "keyword": "oneOf",
    "message": "should match exactly one schema in oneOf",
    "params": Object {
      "passingSchemas": null,
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf",
  },
]
`;

exports[`Test Schema properties.items-list 1`] = `true`;

exports[`Test Schema properties.items-list 2`] = `null`;

exports[`Test Schema properties.items-list with new lines 1`] = `true`;

exports[`Test Schema properties.items-list with new lines 2`] = `null`;

exports[`Test Schema properties.items-object 1`] = `true`;

exports[`Test Schema properties.items-object 2`] = `null`;

exports[`Test Schema properties.items-object with new lines 1`] = `true`;

exports[`Test Schema properties.items-object with new lines 2`] = `null`;

exports[`Test Schema properties.items-object-object 1`] = `true`;

exports[`Test Schema properties.items-object-object 2`] = `null`;

exports[`Test Schema properties.layout: vertical 1`] = `true`;

exports[`Test Schema properties.layout: vertical 2`] = `null`;

exports[`Test Schema properties.size: default 1`] = `true`;

exports[`Test Schema properties.size: default 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.size: small, properties.bordered: true 1`] = `true`;

exports[`Test Schema properties.size: small, properties.bordered: true 2`] = `null`;
